This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry, noting that the text on each line should not
be longer than the lines of dashes.

Al
------------------------------------------------------------------------------

Tue Oct  2 21:29:28 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reverted changes accidentally made to elks/Makefile previously.
	  Changes to other Makefiles in the tree still have to be reverted.
	* Changed method of calculating ELKS_VERSION_CODE and simplified
	  it in the process. The new method allows for 15 pre's between
	  sublevels, instead of the 7 that previously existed.
	* Bumped version up to 0.0.85-pre3 to provide a marker for the
	  previous change. This is tagged as V0-0-85-PRE3 in CVS.
	* Added `make ELKS` rule to elks/Makefile - this will also be added
	  to all other Makefiles as I progress through the tree, and will
	  have the result of performing `make all` in the base directory
	  independantly of the current location in the tree.

Sat Sep 29 13:47:47 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Added lefted out locking of sock.avail_data
	* Changed unix and nano sockets to use semaphores. Saved around
	  120 bytes of code.

Wed Sep 26 23:36:17 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Deleted redundant Makefile's from elks/Documentation subtree.
	* Added prototype rule to Makefile-rules to allow automatic
	  conversion of *.html to *.txt by Makefiles.

Sun Sep  9 xx:xx:xx BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Accidentally committed Makefile tweaks as part of the Makefile
	  rationalisation that I started on 30 Aug 2001 that appear to
	  have broken the compilation of ELKS. This wasn't discovered
	  until 26 Sep 2001.

	  The part of the rationalisation that appears to have caused
	  problems is that of ensuring that ld86 was used throughout to